--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,16 @@ body {
   margin: 100px auto;
   padding: 10px;
 }
+
 nav {
   display: flex;
   justify-content: space-between;
 }
+
 nav h1 {
   margin: 0;
 }
+
 nav a {
   color: white;
   text-decoration: none;
@@ -23,10 +26,13 @@ nav a {
   padding: 10px;
   border-radius: 10px;
 }
+
 form {
   max-width: 500px;
 }
-input, textarea {
+
+input,
+textarea {
   display: block;
   margin: 16px 0;
   padding: 6px 10px;
@@ -34,6 +40,27 @@ input, textarea {
   border: 1px solid #ddd;
   font-family: 'Roboto';
 }
+
 textarea {
-  min-height:200px;
+  min-height: 200px;
+}
+
+/* post list */
+.post {
+  padding: 16px;
+  background: white;
+  border-radius: 10px;
+  margin: 20px 0;
+}
+
+.post h2 {
+  margin: 0;
+}
+
+.post p {
+  margin-top: 0;
+}
+
+.post a {
+  color: #36cca2;
 }
